--- a/GUI/App.xaml
+++ b/GUI/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="S3_Sommerhaandbold.App"
+﻿<Application x:Class="GUI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:S3_Sommerhaandbold"
+             xmlns:local="clr-namespace:GUI"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
