--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -33,13 +33,37 @@
                 </StackPanel>
             </TabItem>
             <TabItem Header="Teams">
-                <DataGrid ItemsSource="{Binding TeamsViewModel.Teams}" AutoGenerateColumns="False">
-                    <DataGrid.Columns>
-                        <DataGridTextColumn Header="Name" Binding="{Binding Name}"/>
-                        <DataGridTextColumn Header="Seedning" Binding="{Binding Seed}"/>
-                        <DataGridTextColumn Header="Pulje" Binding="{Binding Pot}" IsReadOnly="True"/>
-                    </DataGrid.Columns>
-                </DataGrid>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="2*"/>
+                        <ColumnDefinition Width="1"/>
+                        <ColumnDefinition Width="1*"/>
+                    </Grid.ColumnDefinitions>
+                    <DataGrid Grid.Column="0" ItemsSource="{Binding TeamsViewModel.Teams}" AutoGenerateColumns="False">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="Name" Binding="{Binding Name}"/>
+                            <DataGridTextColumn Header="Seedning" Binding="{Binding Seed}"/>
+                            <DataGridTextColumn Header="Pulje" Binding="{Binding Pot}" IsReadOnly="True"/>
+                        </DataGrid.Columns>
+                    </DataGrid>
+                    <GridSplitter Grid.Column="1" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"/>
+                    <Grid Grid.Column="2">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="60"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="20"/>
+                            <RowDefinition Height="20"/>
+                            <RowDefinition Height="20"/>
+                        </Grid.RowDefinitions>
+                        <TextBlock Grid.Column="0" Grid.Row="0" Text="Navn:"/>
+                        <TextBox Grid.Column="1" Grid.Row="0"/>
+                        <TextBlock Grid.Column="0" Grid.Row="1" Text="Seedning:"/>
+                        <TextBox Grid.Column="1" Grid.Row="1"/>
+                        <Button Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" Content="Tilføj Team"/>
+                    </Grid>
+                </Grid>
             </TabItem>
         </TabControl>
     </Grid>
