--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -58,10 +58,10 @@
                             <RowDefinition Height="20"/>
                         </Grid.RowDefinitions>
                         <TextBlock Grid.Column="0" Grid.Row="0" Text="Navn:"/>
-                        <TextBox Grid.Column="1" Grid.Row="0"/>
+                        <TextBox Grid.Column="1" Grid.Row="0" Name="NewTeamName"/>
                         <TextBlock Grid.Column="0" Grid.Row="1" Text="Seedning:"/>
-                        <TextBox Grid.Column="1" Grid.Row="1"/>
-                        <Button Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" Content="Tilføj Team"/>
+                        <TextBox Grid.Column="1" Grid.Row="1" Name="NewTeamSeed"/>
+                        <Button Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" Content="Tilføj Team" Click="NewTeamAdded"/>
                     </Grid>
                 </Grid>
             </TabItem>
